ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-reddit-app
  namespace: reddit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: reddit.3.146.37.92.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/test"
            backend:
              service:
                name: reddit-clone-service
                port:
                  number: 3000
